# micro-restaurant-manager

./: README.md  meson.build
.cache/clangd/index/: command.cpp.DA612BED2B038D40.idx  command.h.78521FC49061DAFF.idx  loop.cpp.C9B945FF8BF3B3B6.idx  loop.h.D9168877A956F2F4.idx  main.cpp.514714DFEB1EFEBA.idx  main.cpp.A053284A7AC4840C.idx  menu.cpp.5F494A0FB9B5ABB7.idx  menu.h.829756578096FE0E.idx  rate.cpp.D3A9618E4F6055A1.idx  rate.h.9F5274C07EE2D876.idx  restaurant.cpp.EC52EEB88A0FB0CA.idx  restaurant.h.93DE9757B4585B09.idx  restaurant.h.D6ADFE33FA10C955.idx
include/: meson.build
include/display/: command.h  loop.h  meson.build
include/domain/: menu.h  meson.build  rate.h  restaurant.h
src/: main.cpp  meson.build
src/display/: command.cpp  loop.cpp  meson.build
src/domain/: menu.cpp  meson.build  rate.cpp  restaurant.cpp
